<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6sp"
    tools:context="com.e.k.m.a.financial.discounts.DiscountsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="finconsult"
        android:textSize="25dp"
        android:padding="6sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:fontFamily="cursive"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount1"
            android:onClick="open1"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_orange_light"
            android:textColor="@android:color/white"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="open2"
            android:layout_weight="1"
            android:text="@string/discount2"
            android:textSize="20sp"
            android:layout_margin="2dp"
            android:background="@android:color/holo_purple"
            android:textColor="@android:color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount3"
            android:textSize="20sp"
            android:onClick="open3"
            android:layout_margin="2dp"
            android:background="@android:color/holo_red_dark"
            android:textColor="@android:color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/discount4"
            android:textSize="20sp"
            android:onClick="open4"
            android:layout_margin="2dp"
            android:background="@android:color/holo_green_dark"
            android:textColor="@android:color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="open5"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/discount5"
            android:layout_margin="2dp"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            />

</LinearLayout>
