<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.e.k.m.a.financial.registration.Login">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="FinConsult"
            android:textSize="35sp"
            android:textColor="@android:color/white"
            android:fontFamily="cursive"
            />
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/white"
            >

            <EditText
                android:id="@+id/edt_register_input_password"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_firstName"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_firstName"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_lastName"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_lastName"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_telephone"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_telephone"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:textColorHint="@android:color/white"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_incomeValue"
            android:layout_width="match_parent"
            android:textColorHint="@android:color/white"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_incomeValue"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_incomeValue" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_incomeDate"
            android:textColorHint="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_register_input_incomeDate"
                android:layout_width="match_parent"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:hint="@string/hint_incomeDate" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_up"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corner_tv_white"
            android:id="@+id/btn_register_new_account"
            />

    </LinearLayout>


</ScrollView>
