<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="16dp"
    tools:context="com.e.k.m.a.financial.registration.Login">

<de.hdodenhof.circleimageview.CircleImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/logo"
    android:layout_above="@id/layout_login"
    android:layout_centerHorizontal="true"
    />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
android:layout_centerVertical="true"
    android:id="@+id/layout_login"
    android:layout_marginBottom="16dp"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        >

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@android:color/white"
        >

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>


    <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/tv_forget_password"-->
        <!--/>-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_in"
        android:background="@drawable/rounded_corner_tv_white"
        android:id="@+id/btn_activity_login_sign_in"
        android:layout_marginBottom="8dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sign_up"
        android:background="@drawable/rounded_corner_tv_white"
        android:id="@+id/btn_activity_login_sign_up"
        />
</LinearLayout>
</RelativeLayout>
