<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.e.k.m.a.financial.entrance.EntranceActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="finconsult"
        android:textSize="25dp"
        android:padding="8sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:fontFamily="cursive"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:onClick="openGoal"
                android:background="@android:color/holo_purple"
                android:layout_margin="4dp"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_consulting"
                    android:layout_gravity="center"
                    android:onClick="openGoal"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:onClick="openGoal"
                    android:id="@+id/donor_home_page_categ2_textview"
                    android:text="@string/entrance_goal"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:layout_margin="4dp"
                android:onClick="openDiscounts"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:onClick="openDiscounts"
                    android:src="@drawable/ic_sales"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:onClick="openDiscounts"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:id="@+id/donor_home_page_categ3_textview"
                    android:text="@string/entrance_descounts"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:onClick="openMain"
                android:background="@android:color/holo_red_light"
                android:layout_margin="4dp"
                >
                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="openMain"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_house"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:onClick="openMain"
                    android:id="@+id/donor_home_page_categ1_textview"
                    android:text="@string/entrance_home"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:layout_margin="4dp"
                android:onClick="openReports"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="openReports"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_reports"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:onClick="openReports"
                    android:layout_gravity="center"
                    android:id="@+id/donor_home_page_categ4_textview"
                    android:text="@string/entrance_reports"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                android:background="@android:color/holo_purple"
                android:layout_margin="4dp"
                android:onClick="openstats"
                >

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_margin="8dp"
                    android:onClick="openstats"
                    android:src="@drawable/ic_graph"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    android:textSize="16sp"
                    android:layout_gravity="center"
                    android:id="@+id/donor_home_page_categ5_textview"
                    android:text="@string/entrance_stats"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
